
- Implemented the 'Extras - Extra TBC Prep' feature. A selection of quests can be added to the 'Quests' tab from here, but they are not 'fully' supported everywhere. You should make sure to manage these yourself!

- The 'A Bijou for Zanza' fix was lost in the 3.14b update. It's now back again ^_^
- Added a '/tbcprep ghetto' command to ghetto HS in dungeons, without needing a macro. It will leave your current party first if you're in one.
- Updated the 'About' tab with correct version number and the 3.15 questlog warning.
- Added level 62 trainers to the turnin guides.
- Added exalted requirement for AV quests as a step in the preparation guides
- Fixed several Molten Core raid steps
- Fixed prequest issues with the Tier 0.5 questline
- Fixed warning popups showing for quests that aren't relevant for your selected route.
- Added Egg Freezing steps to UBRS preparation guides
- Added 'The Scarlet Oracle, Demetria' steps to the strat preparation guide
- 'Taste of Flame' is now properly handled, whether you did the Searing Gorge quests or not.
- Solo Route now also starts in Kargath and flies to Burning Steppes, so it can turn in 'Taste of Flame' before hearthstoning
- Several formatting changes to the RXP guides
- Small bugfixes to the RXP guides

3.14 - 2025-01-06
- Added first draft of turnin guide for Strat route
-- We need help on testing this as we cannot copy. Try to grab some items and just run through the guide. It is highly dynamic based on rep/items/quests. We can expect issues here. It is currently missing the item pickup steps. Those and the other routes will be added at a later point.
- A new 'Extras - Mailbox' feature is coming soonTM.

- UI, Max Possible EXP on the experience bar now ignores ignored quests
- UI, Items tab now shouldn't show items from ignored quests if 'Relevant' is checked
- Added in missing items from the quest "Anthion's Strange Request" (8947). This is the last T0.5 Quest which only the STRAT route does. Expensive 9k exp.